--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="/calculator-48.png">
         <link rel="stylesheet" href="/src/assets/main.css">
-        <title>Vite App</title>
+        <title>Distance Calculator</title>
     </head>
     <body>
         <div id="app"></div>
