--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="/calculator-48.png">
+        <link rel="icon" href="/Vue-Practice/calculator-48.png">
         
-        <title>Vite App</title>
-      <script type="module" crossorigin src="/assets/index.019a90f4.js"></script>
-      <link rel="stylesheet" href="/assets/index.6dac1b35.css">
+        <title>Distance Calculator</title>
+      <script type="module" crossorigin src="/Vue-Practice/assets/index.019a90f4.js"></script>
+      <link rel="stylesheet" href="/Vue-Practice/assets/index.6dac1b35.css">
     </head>
     <body>
         <div id="app"></div>
